--- a/public/css/login.css
+++ b/public/css/login.css
@@ -31,3 +31,5 @@ body {
         width: 100px;
         height: 40px;
         cursor: pointer; }
+      .container_inner form h4 {
+        color: #c84646; }
