--- a/scss/login.scss
+++ b/scss/login.scss
@@ -43,6 +43,10 @@ body {
                 height: 40px;
                 cursor: pointer;
             }
+
+            & h4 {
+                color: rgb(200, 70, 70);
+            }
         }
     }
 }
