--- a/public/css/register.css
+++ b/public/css/register.css
@@ -33,3 +33,8 @@ body {
         cursor: pointer; }
       .container_inner form h4 {
         color: #c84646; }
+      .container_inner form h5 a {
+        text-decoration: none;
+        color: #327d32; }
+        .container_inner form h5 a:hover {
+          color: #323232; }
