--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -8,25 +8,71 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .container {
-  height: 100vh;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  color: #323223; }
   .container_inner {
     display: flex;
-    justify-content: center; }
-    .container_inner form {
+    flex-direction: column; }
+    .container_inner .title {
+      margin-top: 15px;
+      margin-bottom: 15px;
+      text-align: center; }
+    .container_inner .row {
       display: flex;
+      align-items: center;
       flex-direction: column;
-      align-items: center; }
-      .container_inner form > * {
-        margin-top: 15px; }
-      .container_inner form h2 {
+      background: #323232;
+      padding: 10px;
+      border-radius: 14px; }
+      .container_inner .row p {
+        text-align: center;
+        font-size: 14px;
+        margin-bottom: 8px;
+        color: wheat; }
+      .container_inner .row input {
+        padding: 4px 12px;
+        border-radius: 10px;
+        border: none;
+        outline: none; }
+        .container_inner .row input + input {
+          margin-top: 8px; }
+        .container_inner .row input + button {
+          margin-top: 8px; }
+      .container_inner .row button {
+        padding: 2px 8px;
+        border-radius: 8px;
+        border: none;
+        background-color: wheat;
         color: #323232; }
-      .container_inner form input {
-        width: 200px;
-        height: 40px;
-        padding: 8px; }
-      .container_inner form button {
-        width: 100px;
-        height: 40px;
-        cursor: pointer; }
+        .container_inner .row button:hover {
+          cursor: pointer;
+          background-color: white; }
+      .container_inner .row + .row {
+        margin-top: 10px; }
+      .container_inner .row form {
+        display: flex;
+        flex-direction: column; }
+
+.header {
+  background-color: #323232;
+  color: wheat; }
+  .header_inner {
+    height: 32px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    .header_inner a {
+      color: wheat;
+      text-decoration: none; }
+    .header_inner menu {
+      display: flex; }
+      .header_inner menu li {
+        list-style: none; }
+        .header_inner menu li + li {
+          margin-left: 16px; }
+        .header_inner menu li a {
+          color: wheat;
+          text-decoration: none; }
+          .header_inner menu li a:hover {
+            color: white; }
