--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -79,6 +79,7 @@ body {
 					text-align: center;
 
 					&:hover {
+						cursor: pointer;
 						background-color: white;
 						color: #323232;
 					}
@@ -182,7 +183,7 @@ body {
 
 					&_top {
 						display: flex;
-						justify-content: space-evenly;
+						justify-content: space-around;
 						align-items: center;
 
 						& .heart {
@@ -232,6 +233,44 @@ body {
 
 				& .post + .post {
 					margin-top: 15px;
+				}
+			}
+		}
+	}
+}
+
+.header {
+	background-color: #323232;
+	color: wheat;
+
+	&_inner {
+		height: 32px;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+
+		& a {
+			color: wheat;
+			text-decoration: none;
+		}
+
+		& menu {
+			display: flex;
+
+			& li {
+				list-style: none;
+
+				& + li {
+					margin-left: 16px;
+				}
+
+				& a {
+					color: wheat;
+					text-decoration: none;
+
+					&:hover {
+						color: white;
+					}
 				}
 			}
 		}
