--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -10,38 +10,109 @@ body {
 }
 
 .container {
-    height: 100vh;
     display: flex;
     justify-content: center;
+    color: #323223;
 
     &_inner {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
 
-        & form {
+        & .title {
+            margin-top: 15px;
+            margin-bottom: 15px;
+            text-align: center;
+        }
+
+        & .row {
             display: flex;
-            flex-direction: column;
             align-items: center;
+            flex-direction: column;
+            background: #323232;
+            padding: 10px;
+            border-radius: 14px;
 
-            & > * {
-                margin-top: 15px;
-            }
-
-            & h2 {
-                color: #323232;
+            & p {
+                text-align: center;
+                font-size: 14px;
+                margin-bottom: 8px;
+                color: wheat;
             }
 
             & input {
-                width: 200px;
-                height: 40px;
-                padding: 8px;
+                padding: 4px 12px;
+                border-radius: 10px;
+                border: none;
+                outline: none;
+
+                & + input {
+                    margin-top: 8px;
+                }
+
+                & + button {
+                    margin-top: 8px;
+                }
             }
 
             & button {
-                width: 100px;
-                height: 40px;
-                cursor: pointer;
+                padding: 2px 8px;
+                border-radius: 8px;
+                border: none;
+                background-color: wheat;
+                color: #323232;
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: white;
+                }
+            }
+
+            & + .row {
+                margin-top: 10px;
+            }
+
+            & form {
+                display: flex;
+                flex-direction: column;
             }
         }
     }
+}
+
+.header {
+	background-color: #323232;
+	color: wheat;
+
+	&_inner {
+		height: 32px;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+
+		& a {
+			color: wheat;
+			text-decoration: none;
+		}
+
+		& menu {
+			display: flex;
+
+			& li {
+				list-style: none;
+
+				& + li {
+					margin-left: 16px;
+				}
+
+				& a {
+					color: wheat;
+					text-decoration: none;
+
+					&:hover {
+						color: white;
+					}
+				}
+			}
+		}
+	}
 }
