--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -89,7 +89,7 @@ body {
 					width: 150px;
 					height: 150px;
 					border-radius: 14px;
-					border: 1px #323232 solid;
+					// border: 1px #323232 solid;
 				}
 			}
 
